--- a/test-data/conf/image.conf
+++ b/test-data/conf/image.conf
@@ -10,6 +10,7 @@ server {
     {
         root /mnt/hgfs/MyWorks/GitHub/ngx_image_thumb/test-data/images;
         image on;
+        image_use_imagick on; 
         image_output on;
         image_jpeg_quality 100;
         image_water on;
