--- a/config
+++ b/config
@@ -5,8 +5,8 @@ ngx_feature_incs="#include <curl/curl.h>
 #include <gd.h>
 #include <magick/MagickCore.h>
 #include <pcre.h>"
-ngx_feature_path="/usr/include/ImageMagick"
-ngx_feature_libs="-lcurl -lMagickCore"
+ngx_feature_path="/usr/include/ImageMagick-6"
+ngx_feature_libs="-lcurl -lMagickCore-6.Q16"
 ngx_feature_test=
 
 ngx_addon_name=ngx_http_image_module
@@ -31,5 +31,4 @@ else
     CORE_LIBS="$CORE_LIBS $ngx_feature_libs"
 
 fi
-
 
